crates/tests/fixtures/harness/data/error/no_guid_with_args/input.rdl

#[win32]
mod Test {
    #[no_guid(something)]
    interface IFoo {}
}
        